fix layout problem

--- a/app/public/style.css
+++ b/app/public/style.css
@@ -379,6 +379,7 @@ h2.floor img {
 .bordered_cards {
   display: flex;
   margin: 0 0 0 6px;
+  flex-wrap: wrap;
 }
 .bordered_cards div {
   text-align: center;
